Edited endpoints
